--- a/ch.09/ch.09.InfiniteLists(show).ipynb
+++ b/ch.09/ch.09.InfiniteLists(show).ipynb
@@ -2633,8 +2633,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "primes 1 = 2 :⊥\n",
     "primes 2 = 2 : 3 :⊥\n",
@@ -2643,7 +2647,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "부분 리스트 primes2는 4보다 작은 모든 소수를 생성하고 primes3은 9보다 적은 모든 소스를 만들며 primes4는 49보다 작은 모든 소수를 만든다."
@@ -2657,7 +2661,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -2667,7 +2671,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -2676,7 +2680,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "이 장의 의도는 겜을 실시하고 점수를 매기는 겜이다."
@@ -2714,7 +2718,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "겜에는 전략이 필요하다.\n",
@@ -2758,7 +2762,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "전략은 지금까지 상대방이 낸 이동들에서 유한 리스트를 취하여 다음판의 이동을 내는 함수이다. 처리 과정을 효과적으로 하기 위해서 이전 이동은 역순으로 둔다."
@@ -2777,14 +2781,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "첫 이동은 바위의 임의 선택이다."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "두번째 전략인 스마트 전략의 구현이다."
@@ -2835,7 +2839,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "전략은 각 이동을 세서 하나의 이동을 고르기 위해 결과를 사용한다.\n",
@@ -2883,14 +2887,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "함수 extend는 신규 쌍을 생성해서 앞에 넣고 rounds1은 초기 빈 리스트에서 round의 무한 리스트를 생성한다."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "For comparison, let’s consider another way we might reasonably represent strate-\n",
@@ -3057,14 +3061,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "rounds2는 cyclic lists다."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "여기에는 치명적 결점이 있는데"
@@ -3085,7 +3089,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -3123,14 +3127,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Copy strategy 처럼 동작한다."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "속임수를 막을 순 없나?\n",
@@ -3143,14 +3147,18 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "wdf (n, ms) ⇒ wdf (n+1, f (ms))"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "cheat는 wdf (0, ⊥)는 참이지만 wdf (1, cheat ⊥)는 거짓이기에 정직하지 않다."
@@ -3168,14 +3176,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "dozy는 실질적으로 속임수가 아닐지라도 정의에 따라 정직하지 않다."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "정직한 전략만 겜에 참여하게 할 수 있나?\n",
@@ -3197,7 +3205,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "7장에서 x `seq` y는 y에 앞서 x를 평가해 버린다."
@@ -3224,7 +3232,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "가위 바위 보는 이동의 무한 리스트를 취하여 유사한 리스트를 반환하는 함수의 상호 작용을 모델링이다. 무한 리스트가 스트림이라고 불리기 때문에 이것을 스트림 기반 상호작용이라 한다.\n",
@@ -3586,22 +3594,26 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "이 함수는 실세계의 입력 채널에서 무한의 문자 리스트를 취해서 출력 채널에 무한의 문자 리스트를 반환한다."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "예를 들자면"
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "ghci> import Data.Char\n",
     "ghci> interact (map toUpper)\n",
@@ -3613,7 +3625,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "We can also design an interactive program that terminates. For example,\n",
@@ -3622,8 +3634,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "ghci> interact (map toUpper . takeWhile (/= '.'))\n",
     "Goodbye. Forever\n",
@@ -3631,7 +3647,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "lhs를 받아서 hs로 반환하는 프로그램을 보자."
@@ -3652,22 +3668,26 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "주~욱 읽어 보라"
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "$ ghc lhs2hs.lhs\n",
     "$ lhs2hs <myscript.lhs >myscript.hs"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "myscript.lhs를 받아서 myscript.hs를 뱉는다."
@@ -3681,7 +3701,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "또 다른 cyclic lists로 마무리하련다. 페이지들로 구성된 비어있지 않은 책을 상상해 보라. 책을 훑어 보려면 다음과 이전 페이지로 이동할 수 있는 수단이 필요하다.\n",
@@ -3700,7 +3720,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "cyclic doubly-linked list로 구현해 보자."
@@ -3737,7 +3757,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "우리 책은 [p1,p2,p3]의 3페이지 짜리 리스트이다."
@@ -3758,127 +3778,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>/*\n",
-       "Custom IHaskell CSS.\n",
-       "*/\n",
-       "\n",
-       "/* Styles used for the Hoogle display in the pager */\n",
-       ".hoogle-doc {\n",
-       "    display: block;\n",
-       "    padding-bottom: 1.3em;\n",
-       "    padding-left: 0.4em;\n",
-       "}\n",
-       ".hoogle-code {\n",
-       "    display: block;\n",
-       "    font-family: monospace;\n",
-       "    white-space: pre;\n",
-       "}\n",
-       ".hoogle-text {\n",
-       "    display: block;\n",
-       "}\n",
-       ".hoogle-name {\n",
-       "    color: green;\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       ".hoogle-head {\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       ".hoogle-sub {\n",
-       "    display: block;\n",
-       "    margin-left: 0.4em;\n",
-       "}\n",
-       ".hoogle-package {\n",
-       "    font-weight: bold;\n",
-       "    font-style: italic;\n",
-       "}\n",
-       ".hoogle-module {\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       ".hoogle-class {\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "\n",
-       "/* Styles used for basic displays */\n",
-       ".get-type {\n",
-       "    color: green;\n",
-       "    font-weight: bold;\n",
-       "    font-family: monospace;\n",
-       "    display: block;\n",
-       "    white-space: pre-wrap;\n",
-       "}\n",
-       "\n",
-       ".show-type {\n",
-       "    color: green;\n",
-       "    font-weight: bold;\n",
-       "    font-family: monospace;\n",
-       "    margin-left: 1em;\n",
-       "}\n",
-       "\n",
-       ".mono {\n",
-       "    font-family: monospace;\n",
-       "    display: block;\n",
-       "}\n",
-       "\n",
-       ".err-msg {\n",
-       "    color: red;\n",
-       "    font-style: italic;\n",
-       "    font-family: monospace;\n",
-       "    white-space: pre;\n",
-       "    display: block;\n",
-       "}\n",
-       "\n",
-       "#unshowable {\n",
-       "    color: red;\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "\n",
-       ".err-msg.in.collapse {\n",
-       "  padding-top: 0.7em;\n",
-       "}\n",
-       "\n",
-       "/* Code that will get highlighted before it is highlighted */\n",
-       ".highlight-code {\n",
-       "    white-space: pre;\n",
-       "    font-family: monospace;\n",
-       "}\n",
-       "\n",
-       "/* Hlint styles */\n",
-       ".suggestion-warning { \n",
-       "    font-weight: bold;\n",
-       "    color: rgb(200, 130, 0);\n",
-       "}\n",
-       ".suggestion-error { \n",
-       "    font-weight: bold;\n",
-       "    color: red;\n",
-       "}\n",
-       ".suggestion-name {\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "</style><span class='err-msg'>Not in scope: ‘as’<br/>Perhaps you meant one of these: ‘xs’ (line 1), ‘abs’ (imported from Prelude), ‘IHaskellTH.asP’ (imported from Language.Haskell.TH)<br/><br/><br/>Not in scope: ‘rotr’<br/><br/><br/>Not in scope: ‘rotl’</span>"
-      ],
-      "text/plain": [
-       "Not in scope: ‘as’\n",
-       "Perhaps you meant one of these: ‘xs’ (line 1), ‘abs’ (imported from Prelude), ‘IHaskellTH.asP’ (imported from Language.Haskell.TH)\n",
-       "\n",
-       "\n",
-       "Not in scope: ‘rotr’\n",
-       "\n",
-       "\n",
-       "Not in scope: ‘rotl’"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "map elem xs = as\n",
     "map prev xs = rotr xs\n",
@@ -4220,7 +4124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
