--- a/ch.09/ch.09.InfiniteLists(show).ipynb
+++ b/ch.09/ch.09.InfiniteLists(show).ipynb
@@ -2493,8 +2493,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "fact 0 n = ⊥\n",
     "fact 1 n = if n==0 then 1 else ⊥\n",
@@ -2864,7 +2868,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "함수 mkStdGen는 정수를 취해서 임의의 값을 반환한다.\n",
@@ -3103,8 +3107,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "xs 1 = cheat ⊥ = ⊥\n",
     "ys 1 = copy2 ⊥ = Rock: ⊥\n",
@@ -3709,8 +3717,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "ghci>start book \"Page 1\"\n",
     "ghci>next it \"Page 2\"\n",
@@ -3827,8 +3839,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "x:xs\n",
     "= {since xs is a doubly-linked list}\n",
